infra/k8s/manifests/k8s-backend-deploy-svc.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend
  labels:
    app: todo-backend

spec:
  replicas: 3
  selector:
    matchLabels:
     app: todo-backend 
  template:
    metadata:
      labels:
       app: todo-backend
       testlable: lable1
    spec:
      containers:
        - name: todo-backend
          image: matveyxt/todo-backend:1.2.0
          ports:
            - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
spec:
  selector:
    app: todo-backend # pod label
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
